--- a/plutus-contract/plutus-contract.cabal
+++ b/plutus-contract/plutus-contract.cabal
@@ -50,12 +50,15 @@ library
         Language.Plutus.Contract.Trace
         Language.Plutus.Contract.Record
         Language.Plutus.Contract.IOTS
-        Language.Plutus.Contract.Servant
+        Language.Plutus.Contract.Server
         Language.Plutus.Contract.Resumable
         Language.Plutus.Contract.Tx
         Language.Plutus.Contract.Util
         Language.Plutus.Contract.Wallet
         Language.Plutus.Contract.Typed.Tx
+    other-modules:
+        Language.Plutus.Contract.Servant
+        ContractServer
     hs-source-dirs: src
     build-depends:
         plutus-wallet-api -any,
@@ -76,6 +79,7 @@ library
         profunctors -any,
         transformers -any,
         warp -any,
+        wai -any,
         transformers-base -any,
         monad-control -any,
         mmorph -any,
@@ -83,6 +87,23 @@ library
         tasty-hunit -any,
         row-types -any,
         prettyprinter >=1.1.0.1
+
+    if(impl(ghcjs))
+        other-extensions: JavaScriptFFI
+        js-sources: platform/web/jsbits/requestHandler.js
+        hs-source-dirs: platform/web/src
+        build-depends:
+            bytestring -any,
+            case-insensitive -any,
+            ghc-prim -any,
+            ghcjs-base -any,
+            ghcjs-prim -any,
+            vault -any,
+            http-types -any,
+            wai -any,
+            network -any,
+    else
+        hs-source-dirs: platform/network/src
 
 test-suite contract-doctests
     type: exitcode-stdio-1.0
